add support for sqlite with product dbset

--- a/CarvedRock.Api/appsettings.json
+++ b/CarvedRock.Api/appsettings.json
@@ -5,7 +5,9 @@
       "Microsoft.AspNetCore": "Warning",
       "CarvedRock":"Debug"
     }
-   
+  },
+  "ConnectionStrings": {
+    "DefaultConnection":"DataSource=carvedrock-logging.db"
   },
   "AllowedHosts": "*"
 }
