--- a/CarvedRock.Api/CarvedRock.Api.csproj
+++ b/CarvedRock.Api/CarvedRock.Api.csproj
@@ -1,19 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="IdentityModel" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
+    <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.0.0" />
   </ItemGroup>
-
   <ItemGroup>
+    
     <ProjectReference Include="..\CarvedRock.Domain\CarvedRock.Domain.csproj" />
   </ItemGroup>
-
 </Project>
