--- a/CarvedRock.Domain/CarvedRock.Domain.csproj
+++ b/CarvedRock.Domain/CarvedRock.Domain.csproj
@@ -7,4 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0"/>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CarvedRock.Data\CarvedRock.Data.csproj" />
+  </ItemGroup>
+
 </Project>
